--- a/index.html
+++ b/index.html
@@ -174,3 +174,20 @@ padding:20px;
 <img
 
 src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif"
+
+alt="Dancing girl"
+
+style="width:250px; margin-top:20px; border-radius:20px;"
+
+>
+
+</div>`;
+
+}
+
+</script>
+
+
+</body>
+
+</html>
